day 14 in C and a few improvements in utils

--- a/c/utils/test/Makefile
+++ b/c/utils/test/Makefile
@@ -1,18 +1,17 @@
 CC = clang
-CFLAGS = -Wall -Wextra -pedantic -Werror -std=c11
+CFLAGS = -Wall -Wextra -pedantic -Werror -std=c17 -g
 VPATH = ..
-OBJ = test_data.o data.o
+EXE = test_data
+OBJ = $(EXE).o data.o input.o
 
 .PHONY: clean
 
-test_data: $(OBJ)
-	$(CC) -o test_data $(OBJ)
+$(EXE): $(OBJ)
+	$(CC) -o $(EXE) $(OBJ)
 	
 %.o: %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
-test: test_data
-	./test_data
-
 clean:
-	rm -f test_data *.o
+	rm -f $(EXE) *.o
+
